[package]
name = "peach_ai"
version = "0.1.0"
authors = ["Hayden Barnett <haydenbarnett93@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clipboard = "0.5.0"
egui = "0.26.2"
engine = "0.0.0"
enigo = "0.1.3"
global-hotkey = "0.5.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tray-item = "0.9.0"
winit = "0.29.13"

[build-dependencies]
windres = "*"
